--- a/Portfolio-CV/style.css
+++ b/Portfolio-CV/style.css
@@ -580,8 +580,9 @@ progress::-moz-progress-bar{
 
 .portfolio-card img{
     width: 100%;
-    height: 100%;
-    object-fit: cover; /*asegura que la imagen se ajuste al tamaño del contenedor sin distorsionar su relación de aspecto, y cualquier exceso se corta para que la imagen cubra completamente el contenedor.*/
+    aspect-ratio: 1 / 1;  /* Hace que siempre sea cuadrada */
+    object-fit: cover;
+    
 }
 .service-card{
     margin: 1rem auto;
